--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -106,18 +106,18 @@ $navbar-hover-diameter: $base * 20;
   div {
     border-top: 3px solid $black;
     border-bottom: 3px solid $black;
-    transition: all 0.2s ease-in-out;
+    transition: all 0.5s ease-in-out;
 
     span {
       display: block;
       background-color: $black;
       height: 3px;
       margin: 4px 0;
-      transition: all 0.4s ease-in-out;
+      transition: all 0.5s ease-in-out;
     }
   }
 
-  &.active div {
+  .is-open-right & div {
     background-color: $alert-color;
     border: 3px solid $black;
     border-radius: 100%;
